--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h6>Sixth Level Heading</h6>
     <p>This is some text</p>
 
-    <a href="https://www.gwu.edu/"></a>
+    <a href="https://www.gwu.edu/">Visit GW</a>
 
 </body>
 </html>
