--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
 </head>
 <body>
     <h1>My Heading</h1>
-    <p>This is some text</p>
+    <p>My favorites to win the East</p>
   
+    <ol>
+        <li>New England Revolution</li>
+        <li>Nashville SC</li>
+        <li>New York City FC</li>
+      </ol>
+
     <h2>Second Level Heading</h2>
     <p>This is some text</p>
   
