--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
 
     <a href="https://www.gwu.edu/">Visit GW</a>
 
+    <a href="page2.html">Visit Page 2</a>
+
+    <img src="pic_trulli.jpg" alt="Italian Trulli">
+
 </body>
 </html>
