Customize image heights

--- a/index.html
+++ b/index.html
@@ -33,7 +33,16 @@
 
     <a href="page2.html">Visit Page 2</a>
 
-    <img src="pic_trulli.jpg" alt="Italian Trulli">
+    <img
+        src="https://gray-wmctv-prod.cdn.arcpublishing.com/resizer/-VUWdphjAaOEJb-daqJZkR1xGek=/1200x675/smart/filters:quality(85)/cloudfront-us-east-1.images.arcpublishing.com/gray/MTKJNYRSIZHWXNU2AKSEBJ4BHM.jpg"
+        alt="GW mascot"
+        height="100px"
+    >
 
+    <img
+        src="firefox_2018-07-10_07-50-11.png"
+        a red apple"
+        height="100px"
+    >
 </body>
 </html>
