--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
     <a href="page2.html">Visit Page 2</a>
 
+    <a href="page3.html">Visit Page 3</a>
+
     <img
         src="https://gray-wmctv-prod.cdn.arcpublishing.com/resizer/-VUWdphjAaOEJb-daqJZkR1xGek=/1200x675/smart/filters:quality(85)/cloudfront-us-east-1.images.arcpublishing.com/gray/MTKJNYRSIZHWXNU2AKSEBJ4BHM.jpg"
         alt="GW mascot"
