--- a/page3.html
+++ b/page3.html
@@ -3,22 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>Hello | My Site</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   </head>
   <body>
-    <h1 style="font-size:48px; color: red;">Hello World</h1>
+    <h1>Hello World</h1>
 
-    <p style="font-family: monospace; color: '#ccc';">Welcome to my site.</p>
+    <p>Welcome to my site.</p>
 
-    <div style="border: 2px solid #000;">
-      <p style="font-family: monospace; color: '#ccc';">Some paragraph text here!</p>
+    <div id="my-divider">
+      <p>Some paragraph text here!</p>
 
-      <ol style="list-style:none;">
-        <li style="display: inline;">One</li>
-        <li style="display: inline;">Two</li>
-        <li style="display: inline;">Three</li>
+      <ol>
+        <li class="horizontal">One</li>
+        <li class="horizontal">Two</li>
+        <li class="horizontal">Three</li>
       </ol>
 
-      <p style="font-family: monospace; color: 'red';">Some more text at the bottom.</p>
+      <button type="button" class="btn btn-primary">Click Me</button>
+
+      <a href="index.html">Visit Homepage</a>
+
     </div>
   </body>
 </html>
