--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 </head>
 <body>
     <h1>My Heading</h1>
-    <p>My favorites to win the East</p>
+    <p>My favorite things to do</p>
   
     <ol>
-        <li>New England Revolution</li>
-        <li>Nashville SC</li>
-        <li>New York City FC</li>
+        <li>Hang out with Sof</li>
+        <li>Hang out with Sof</li>
+        <li>Hang out with Sof</li>
       </ol>
 
     <h2>Second Level Heading</h2>
-    <p>This is some text</p>
+    <p>Hullo</p>
   
     <h3>Third Level Heading</h3>
     <p>This is some text</p>
@@ -35,10 +35,12 @@
 
     <a href="page3.html">Visit Page 3</a>
 
+    <a href="page4.html">Visit Page 4</a>
+
     <img
         src="https://gray-wmctv-prod.cdn.arcpublishing.com/resizer/-VUWdphjAaOEJb-daqJZkR1xGek=/1200x675/smart/filters:quality(85)/cloudfront-us-east-1.images.arcpublishing.com/gray/MTKJNYRSIZHWXNU2AKSEBJ4BHM.jpg"
         alt="GW mascot"
-        height="100px"
+        height="200px"
     >
 
     <img
