--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <p>My favorite things to do</p>
   
     <ol>
-        <li>Hang out with Sof</li>
-        <li>Hang out with Sof</li>
-        <li>Hang out with Sof</li>
+        <li>Hang out</li>
+        <li>Hang out</li>
+        <li>Hang out</li>
       </ol>
 
     <h2>Second Level Heading</h2>
@@ -47,6 +47,16 @@
         src="firefox_2018-07-10_07-50-11.png"
         a red apple"
         height="100px"
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BT9CBBJCZL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BT9CBBJCZL');
+</script>
     >
 </body>
 </html>
