--- a/page2.html
+++ b/page2.html
@@ -8,5 +8,16 @@
     <h1>This is Page 2</h1>
 
     <a href="index.html">Visit Homepage</a>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BT9CBBJCZL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BT9CBBJCZL');
+</script>
+
 </body>
 </html>
