--- a/page3.html
+++ b/page3.html
@@ -24,5 +24,16 @@
       <a href="index.html">Visit Homepage</a>
 
     </div>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BT9CBBJCZL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BT9CBBJCZL');
+</script>
+
   </body>
 </html>
