--- a/page4.html
+++ b/page4.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
-    <title>Hello, world!</title>
+    <title>Marc Machado's Website</title>
   </head>
   <body>
 
@@ -15,7 +15,7 @@
       BOOTSTRAP NAV
       https://getbootstrap.com/docs/5.0/components/navbar/
     -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">My Web App</a>
 
@@ -48,7 +48,8 @@
     <div class="container" style="margin-top:2em;">
 
       <div>
-        <h1>Hello, world!</h1>
+        <h1>Marc's Website
+        </h1>
       </div>
 
 
@@ -65,8 +66,17 @@
 
         console.log("Thanks for the page visit!")
 
-        <a href="index.html">Visit Homepage</a>
-
     </script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BT9CBBJCZL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BT9CBBJCZL');
+</script>
+
   </body>
 </html>
